--- a/diploma/tsconfig.json
+++ b/diploma/tsconfig.json
@@ -20,9 +20,11 @@
       }
     ],
     "paths": {
+      "react": ["./node_modules/@types/react"],
       "@/*": ["./src/*"]
     }
   },
+
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
 }
