--- a/diploma/package.json
+++ b/diploma/package.json
@@ -20,10 +20,12 @@
     "framer-motion": "^12.5.0",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.487.0",
+    "mapbox-gl-compare": "^0.4.1",
     "mapbox-gl-geocoder": "^2.0.1",
     "next": "15.1.7",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-select": "^5.10.1"
   },
   "resolutions": {
     "@types/react": "17.0.14",
