--- a/diploma/package.json
+++ b/diploma/package.json
@@ -24,6 +24,7 @@
     "mapbox-gl-geocoder": "^2.0.1",
     "next": "15.1.7",
     "react": "^19.0.0",
+    "react-datepicker": "^8.3.0",
     "react-dom": "^19.0.0",
     "react-select": "^5.10.1"
   },
