--- a/diploma/package.json
+++ b/diploma/package.json
@@ -12,6 +12,8 @@
     "@mapbox/mapbox-gl-geocoder": "^5.0.3",
     "@mapbox/search-js-react": "^1.0.0",
     "@react-google-maps/api": "^2.20.6",
+    "@stripe/react-stripe-js": "^3.6.0",
+    "@stripe/stripe-js": "^7.1.0",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.0",
     "cors": "^2.8.5",
@@ -22,11 +24,12 @@
     "lucide-react": "^0.487.0",
     "mapbox-gl-compare": "^0.4.1",
     "mapbox-gl-geocoder": "^2.0.1",
-    "next": "15.1.7",
+    "next": "^15.3.1",
     "react": "^19.0.0",
     "react-datepicker": "^8.3.0",
     "react-dom": "^19.0.0",
-    "react-select": "^5.10.1"
+    "react-select": "^5.10.1",
+    "stripe": "^18.0.0"
   },
   "resolutions": {
     "@types/react": "17.0.14",
