--- a/diploma/package.json
+++ b/diploma/package.json
@@ -18,6 +18,7 @@
     "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.0",
     "cors": "^2.8.5",
+    "crypto-js": "^4.2.0",
     "firebase": "^11.3.1",
     "formidable": "^3.5.2",
     "framer-motion": "^12.5.0",
@@ -31,6 +32,7 @@
     "react-dom": "^19.0.0",
     "react-select": "^5.10.1",
     "stripe": "^18.0.0",
+    "use-debounce": "^10.0.4",
     "uuid": "^11.1.0"
   },
   "resolutions": {
@@ -39,6 +41,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/crypto-js": "^4.2.2",
     "@types/formidable": "^3.4.5",
     "@types/jsonwebtoken": "^9.0.8",
     "@types/mapbox__mapbox-sdk": "^0.16.1",
